tests/NormalTests/paczka1/fuzzy1/67882725.err
Error in line 7: qS4yxMpqtz S480 97,5
Error in line 10: S712 S969 55,1
Error in line 6: grmCQ S712 99,7
Error in line 28: qS4yxMpqtz S712 77,90
Error in line 21: qS4yxMpqtz S254 194,9
Error in line 30: KDmZ S480 23,4
